--- a/incubator/redash/templates/configmap.yaml
+++ b/incubator/redash/templates/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Name }}-redash-server-configmap
 data:
   REDASH_COOKIE_SECRET: {{ randAlphaNum 10 | b64enc | quote }}
-  REDASH_WEB_WORKERS: "4"
+  REDASH_WEB_WORKERS: "{{ .Values.server.configMap.redashWebWorkers }}"
 
 ---
 
@@ -13,8 +13,8 @@ kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-redash-worker-configmap
 data:
-  QUEUES: "queries,scheduled_queries,celery"
-  WORKERS_COUNT: "2"
+  QUEUES: "{{ .Values.server.configMap.queue }}"
+  WORKERS_COUNT: "{{ .Values.worker.configMap.workerCount }}"
 
 ---
 
@@ -23,5 +23,16 @@ kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-redash-common-configmap
 data:
-  REDASH_LOG_LEVEL: "INFO"
-  REDASH_REDIS_URL: "redis://localhost:6379/0"
+  REDASH_LOG_LEVEL: {{ .Values.common.configMap.redashLogLevel }}
+  REDASH_REDIS_URL: "{{ .Values.common.configMap.redashRedisUrl }}"
+  REDASH_GOOGLE_CLIENT_ID: "{{ .Values.oauth.google.clientId }}"
+  REDASH_GOOGLE_CLIENT_SECRET: "{{ .Values.oauth.google.secret }}"
+  REDASH_GOOGLE_APPS_DOMAIN: "{{ .Values.oauth.google.appsDomain }}"
+  REDASH_MAIL_SERVER: "{{ .Values.redashEmail.server }}"
+  REDASH_MAIL_PORT: "{{ .Values.redashEmail.port }}"
+  REDASH_MAIL_USE_TLS: "{{ .Values.redashEmail.useTLS }}"
+  REDASH_MAIL_USE_SSL: "{{ .Values.redashEmail.useSSL }}"
+  REDASH_MAIL_USERNAME: "{{ .Values.redashEmail.username }}"
+  REDASH_MAIL_PASSWORD: "{{ .Values.redashEmail.password }}"
+  REDASH_MAIL_DEFAULT_SENDER: "{{ .Values.redashEmail.defaultSender}}"
+  REDASH_HOST: "{{ .Values.redashEmail.host }}"
