--- a/incubator/redash/values.yaml
+++ b/incubator/redash/values.yaml
@@ -1,8 +1,75 @@
 db:
-  name: ""
-  user: ""
-  pass: ""
-  host: ""
+  name: redash
+  user: redash
+  pass: redash
+  host: redash-db-postgresql
 
 service:
   type: LoadBalancer
+  loadBalancerIP: ""
+  externalPort: 80
+  internalPort: 5000
+ingress:
+  enabled: false
+  # Used to create an Ingress record.
+  hosts:
+    - chart-example.local
+  annotations:
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  tls:
+    # Secrets must be manually created in the namespace.
+    # - secretName: chart-example-tls
+    #   hosts:
+    #     - chart-example.local
+common:
+  configMap:
+    redashLogLevel: "INFO"
+    redashRedisUrl: "redis://redash-broker-redis:6379/0"
+
+oauth:
+  google:
+    clientId: ""
+    secret: ""
+    appsDomain: ""
+
+redashEmail:
+  server: localhost
+  port: 25
+  useTLS: False
+  useSSL: false
+  username: ""
+  password: ""
+  defaultSender: ""
+  host: ""
+
+server:
+  deployment:
+    name: server
+    image:
+      repository: redash/redash
+      tag: latest
+      pullPolicy: IfNotPresent
+    ImagePullPolcy:
+    replicas: 1
+    annotations:
+    nodeSelector: {}
+    resource: {}
+  configMap:
+    redashWebWorkers: "4"
+
+worker:
+  deployment:
+    name: worker
+    image:
+      repository: redash/redash
+      tag: latest
+      pullPolicy: IfNotPresent
+    ImagePullPolcy:
+    replicas: 1
+    annotations:
+    nodeSelector: {}
+    resource: {}
+  configMap:
+    queue: "queries,scheduled_queries,celery"
+    workerCount: "2"
