--- a/incubator/scrapy-splash/values.yaml
+++ b/incubator/scrapy-splash/values.yaml
@@ -14,8 +14,7 @@ service:
 ingress:
   enabled: false
   # Used to create an Ingress record.
-  hosts:
-    - chart-example.local
+  hosts: []
   annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
