--- a/incubator/redash/templates/configmap.yaml
+++ b/incubator/redash/templates/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Name }}-redash-server-configmap
 data:
   REDASH_COOKIE_SECRET: {{ randAlphaNum 10 | b64enc | quote }}
-  REDASH_WEB_WORKERS: "{{ .Values.server.configMap.redashWebWorkers }}"
+  REDASH_WEB_WORKERS: {{ .Values.server.configMap.redashWebWorkers | quote }}
 
 ---
 
@@ -13,8 +13,8 @@ kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-redash-worker-configmap
 data:
-  QUEUES: "{{ .Values.server.configMap.queue }}"
-  WORKERS_COUNT: "{{ .Values.worker.configMap.workerCount }}"
+  QUEUES: {{ .Values.server.configMap.queue | quote }}
+  WORKERS_COUNT: {{ .Values.worker.configMap.workerCount | quote }}
 
 ---
 
@@ -23,16 +23,26 @@ kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-redash-common-configmap
 data:
-  REDASH_LOG_LEVEL: {{ .Values.common.configMap.redashLogLevel }}
-  REDASH_REDIS_URL: "{{ .Values.common.configMap.redashRedisUrl }}"
-  REDASH_GOOGLE_CLIENT_ID: "{{ .Values.oauth.google.clientId }}"
-  REDASH_GOOGLE_CLIENT_SECRET: "{{ .Values.oauth.google.secret }}"
-  REDASH_GOOGLE_APPS_DOMAIN: "{{ .Values.oauth.google.appsDomain }}"
-  REDASH_MAIL_SERVER: "{{ .Values.redashEmail.server }}"
-  REDASH_MAIL_PORT: "{{ .Values.redashEmail.port }}"
-  REDASH_MAIL_USE_TLS: "{{ .Values.redashEmail.useTLS }}"
-  REDASH_MAIL_USE_SSL: "{{ .Values.redashEmail.useSSL }}"
-  REDASH_MAIL_USERNAME: "{{ .Values.redashEmail.username }}"
-  REDASH_MAIL_PASSWORD: "{{ .Values.redashEmail.password }}"
-  REDASH_MAIL_DEFAULT_SENDER: "{{ .Values.redashEmail.defaultSender}}"
-  REDASH_HOST: "{{ .Values.redashEmail.host }}"
+  REDASH_LOG_LEVEL: {{ .Values.common.configMap.redashLogLevel | quote }}
+  REDASH_REDIS_URL: {{ .Values.common.configMap.redashRedisUrl | quote }}
+  REDASH_GOOGLE_CLIENT_ID: {{ .Values.oauth.google.clientId | quote }}
+  REDASH_GOOGLE_CLIENT_SECRET: {{ .Values.oauth.google.secret | quote }}
+  REDASH_GOOGLE_APPS_DOMAIN: {{ .Values.oauth.google.appsDomain | quote }}
+  REDASH_MAIL_SERVER: {{ .Values.redashEmail.server | quote }}
+  REDASH_MAIL_PORT: {{ .Values.redashEmail.port | quote }}
+  REDASH_MAIL_USE_TLS: {{ .Values.redashEmail.useTLS | quote }}
+  REDASH_MAIL_USE_SSL: {{ .Values.redashEmail.useSSL | quote }}
+  REDASH_MAIL_USERNAME: {{ .Values.redashEmail.username | quote }}
+  REDASH_MAIL_PASSWORD: {{ .Values.redashEmail.password | quote }}
+  REDASH_MAIL_DEFAULT_SENDER: {{ .Values.redashEmail.defaultSender| quote }}
+  REDASH_HOST: {{ .Values.redashEmail.host | quote }}
+  TZ: {{ .Values.timezone | quote }}
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Release.Name }}-redash-flower-configmap
+data:
+  CELERY_BROKER_URL: {{ .Values.flower.configMap.celeryBrokerUrl | quote }}
