--- a/incubator/node-red/templates/deployment.yaml
+++ b/incubator/node-red/templates/deployment.yaml
@@ -21,6 +21,9 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          envFrom:
+            - configMapRef:
+              name: {{ template "node-red.fullname" . }}-configmap
           ports:
             - containerPort: {{ .Values.service.internalPort }}
           volumeMounts:
