--- a/incubator/scrapyd/templates/deployment.yaml
+++ b/incubator/scrapyd/templates/deployment.yaml
@@ -19,6 +19,9 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          envFrom:
+            - configMapRef:
+              name: {{ template "scrapyd.fullname" . }}-configmap
           ports:
             - containerPort: {{ .Values.service.internalPort }}
           livenessProbe:
