--- a/incubator/scrapyd/templates/configmap.yaml
+++ b/incubator/scrapyd/templates/configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "scrapyd.fullname" . }}
+  name: {{ template "scrapyd.fullname" . }}-configmap
 data:
 {{- range $key, $val := .Values.configmap }}
   {{ $key }}: |-
