--- a/incubator/redash/templates/deployment/flower.yaml
+++ b/incubator/redash/templates/deployment/flower.yaml
@@ -27,6 +27,9 @@ spec:
           envFrom:
           - configMapRef:
               name: {{ .Release.Name }}-redash-flower-configmap
+          env:
+          - name: REDASH_REDIS_URL
+            value: "redis://{{ .Release.Name }}-{{ template "redash.name" . }}-{{ .Values.broker.deployment.name }}:6379/0"
           resources:
 {{ toYaml .Values.flower.deployment.resources | indent 12 }}
     {{- if .Values.nodeSelector }}
