--- a/incubator/redash/templates/secret.yaml
+++ b/incubator/redash/templates/secret.yaml
@@ -9,4 +9,24 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  REDASH_DATABASE_URL:  {{ template "redash.databaseurl" . }}
+  REDASH_DATABASE_URL: {{ template "redash.databaseurl" . }}
+
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "redash.fullname" . }}-db
+  labels:
+    app: {{ template "redash.fullname" . }}-db
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
+type: Opaque
+data:
+  {{ if .Values.db.meta.pass }}
+  postgres-password:  {{ .Values.db.meta.pass | b64enc | quote }}
+  {{ else }}
+  postgres-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
