--- a/incubator/redash/values.yaml
+++ b/incubator/redash/values.yaml
@@ -1,16 +1,10 @@
-db:
-  name: redash
-  user: redash
-  pass: redash
-  host: redash-db-postgresql
-
 timezone: "Asia/Tokyo"
 
 ingress:
   enabled: false
   # Used to create an Ingress record.
   hosts:
-    - chart-example.local
+    - chart-example.local!
   annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
@@ -22,19 +16,19 @@ ingress:
 common:
   configMap:
     REDASH_LOG_LEVEL: "INFO"
-    REDASH_GOOGLE_CLIENT_ID: ""
-    REDASH_GOOGLE_CLIENT_SECRET: ""
-    REDASH_GOOGLE_APPS_DOMAIN: ""
+    # REDASH_GOOGLE_CLIENT_ID: ""
+    # REDASH_GOOGLE_CLIENT_SECRET: ""
+    # REDASH_GOOGLE_APPS_DOMAIN: ""
     REDASH_MAIL_SERVER: "localhost"
     REDASH_MAIL_PORT: "25"
-    REDASH_MAIL_USE_TLS: "False"
-    REDASH_MAIL_USE_SSL: "False"
-    REDASH_MAIL_USERNAME: "" 
-    REDASH_MAIL_PASSWORD: ""
-    REDASH_MAIL_DEFAULT_SENDER: ""
-    REDASH_HOST: ""
-    REDASH_CELERY_TIMEZONE: "UTC"
-    TZ: "UTC"
+    # REDASH_MAIL_USE_TLS: "False"
+    # REDASH_MAIL_USE_SSL: "False"
+    # REDASH_MAIL_USERNAME:
+    # REDASH_MAIL_PASSWORD:
+    # REDASH_MAIL_DEFAULT_SENDER:
+    # REDASH_HOST:
+    REDASH_CELERY_TIMEZONE: "JST"
+    TZ: "JST"
     REDASH_ADDITIONAL_QUERY_RUNNERS: "redash.query_runner.python"
 
 server:
@@ -42,7 +36,7 @@ server:
     name: server
     type: LoadBalancer
     loadBalancerIP: ""
-    externalPort: 80
+    externalPort: 8088
     internalPort: 5000
   deployment:
     name: server
@@ -65,7 +59,7 @@ worker:
       tag: latest
       pullPolicy: IfNotPresent
     replicas: 1
-    annotations:
+    # annotations:
     nodeSelector: {}
     resource: {}
   configMap:
@@ -89,6 +83,37 @@ broker:
     nodeSelector: {}
     resource: {}
 
+db:
+  containerEnabled: true
+  meta:
+    name: "postgres"
+    user: "postgres"
+    pass: "postgres"
+    host: "redash-db-postgresql"
+    port: "5432"
+  persistence:
+    enabled: true
+    mountPath: /var/lib/postgresql/data/pgdata
+    subPath: "postgresql-db"
+    size: 8Gi
+    accessMode: ReadWriteOnce
+    # annotations: {}
+    # storageClass: "-"
+    # existingClaim:
+  service:
+    name: database
+    type: LoadBalancer
+    externalPort: 5432
+    internalPort: 5432
+  deployment:
+    name: database
+    image:
+      repository: postgres
+      tag: 9.5.6-alpine
+      pullPolicy: IfNotPresent
+    replicas: 1
+    nodeSelector: {}
+    resource: {}
 
 flower:
   enabled: false
